--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
             position: relative;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .heart {
