--- a/index.html
+++ b/index.html
@@ -220,13 +220,12 @@
                 <div class="celebration">
                     <h1>🎉 YAY! 🎉</h1>
                     <p class="message" style="font-size: 1.5em; margin-top: 20px;">
-                        You just made me the happiest person! 💕<br><br>
-                        I can't wait to spend Valentine's Day with you! 💖
+                        💖I can't wait to spend Valentine's Day with you! 💖<br><br>
                     </p>
                     <div style="font-size: 4em; margin-top: 30px;">
-                        💝 💐 🌹 💕 ❤️
+                        💝 💐 🌹 💕 
                     </div>
-                </div>
+                </div>  
             `;
 
             // Create confetti
